# transparentgame

./: README.md  main.cpp
cube/: CMakeLists.txt  README.md
cube/glad/include/glad/: glad.h
cube/glad/src/: glad.c
cube/src/: cube.cpp
game/: README.md
